# fujsu

./: Cargo.toml  README.md
fujsu/: CMakeLists.txt  Cargo.toml  build.rs  library.h
fujsu/include/: fujsu.h
fujsu/src/: configuration.rs  lib.rs  mod_loading.rs  nativelibrary.rs  perm_requester.rs
fujsu/src/errors/: hookerr.rs  mod.rs
fujsu/src/il2cpp/: hook.rs
fujsu/src/utils/: externs.rs  hooking.rs  mod.rs  nativelibrary.rs
libmain/: build.bat
libmain/src/: lib.rs  nativelibrary.rs
main/: .gitignore  Cargo.toml
main/src/: lib.rs  nativeloader.rs
mod_template/: CMakeLists.txt  core.cpp
