[package]
name = "main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
libc = "0.2.142"
log = "0.4.14"
ndk = { version = "0.7", features = ["api-level-23"] }
android_log = "0.1.3"
thiserror = "1.0.40"

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
]